--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.8.1</version>
-      <scope>test</scope>
+      <type>jar</type>
     </dependency>
     <dependency>
       <groupId>commons-codec</groupId>
@@ -47,11 +47,6 @@
 	  <artifactId>commons-lang3</artifactId>
 	  <version>3.1</version>
     </dependency>
-    <dependency>
-	<groupId>org.bouncycastle</groupId>
-	<artifactId>bcprov-jdk15on</artifactId>
-	<version>1.49</version>
-</dependency>
   </dependencies>
    <profiles>
   <profile>
