--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>  
-    <groupId>com.simbacode.payments</groupId>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.simbacode</groupId>
     <artifactId>mobipayments</artifactId>
-    <packaging>jar</packaging>
-    <version>0.0.1</version>
-    <name>Simbacode Mobile Money Payments Library</name>
-    <description>The best Mobile Mobile Payment library out there</description>
+    <version>0.0.1-SNAPSHOT</version>
+
+    <name>Mobipayments</name>
     <url>http://github.com/Simbacode/mobipayments</url>
-  
-    <developers>
-        <developer>
-            <id>mistaguy</id>
-            <name>Acellam Guy</name>
-            <email>abiccel@yahoo.com</email>
-            <timezone>+3</timezone>
-        </developer>
-    </developers>
+    <scm>
+        <url>https://github.com/Simbacode/mobipayments.git</url>
+        <connection>scm:https://github.com/Simbacode/mobipayments.git</connection>
+        <developerConnection>scm:git@github.com:Simbacode/mobipayments.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+    <issueManagement>
+        <url>http://github.com/Simbacode/mobipayments</url>
+    </issueManagement>
+    <ciManagement>
+        <system>Travis-ci</system>
+        <url>https://travis-ci.org/Simbacode/mobipayments</url>
+    </ciManagement>
+    <description>http://github.com/Simbacode/mobipayments</description>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
 
     <licenses>
         <license>
@@ -23,11 +33,93 @@
             <url>http://github.com/Simbacode/mobipayments/blob/master/LICENSE.txt</url>
         </license>
     </licenses>
-    <scm>
-        <connection>scm:http://github.com/Simbacode/mobipayments.git</connection>
-        <developerConnection>scm:http://github.com/Simbacode/mobipayments.git</developerConnection>
-        <url>http://github.com/Simbacode/mobipayments.git</url>
-    </scm>
+
+    <properties>
+        <java.version>1.7</java.version>
+        <jacoco.version>0.6.4.201312101107</jacoco.version>
+        <arguments>-e</arguments>
+    </properties>
+
+    <build>
+        <plugins>
+            <!-- Set up java 7 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
+
+            <!-- Generates test coverage report into "target/site/jacoco" directory -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <!-- remove M2E warning complaining about usage of maven-enforcer-plugin 
+                in parent -->
+                <plugin>
+                    <groupId>org.eclipse.m2e</groupId>
+                    <artifactId>lifecycle-mapping</artifactId>
+                    <version>1.0.0</version>
+                    <configuration>
+                        <lifecycleMappingMetadata>
+                            <pluginExecutions>
+                                <pluginExecution>
+                                    <pluginExecutionFilter>
+                                        <groupId>org.apache.maven.plugins</groupId>
+                                        <artifactId>maven-enforcer-plugin</artifactId>
+                                        <versionRange>[1.0.0,)</versionRange>
+                                        <goals>
+                                            <goal>enforce</goal>
+                                        </goals>
+                                    </pluginExecutionFilter>
+                                    <action>
+                                        <ignore />
+                                    </action>
+                                </pluginExecution>
+                            </pluginExecutions>
+                        </lifecycleMappingMetadata>
+                    </configuration>
+                </plugin>
+				
+                <!-- override version of GPG plugin to use new GPG signing features -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.5</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -95,5 +187,4 @@
         </profile>
     </profiles>
 
-  
 </project>
