--- a/pom.xml
+++ b/pom.xml
@@ -1,180 +1,186 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.simbacode</groupId>
-    <artifactId>mobipayments</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.simbacode</groupId>
+	<artifactId>mobipayments</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
 
-    <name>Mobipayments</name>
-    <url>http://github.com/Simbacode/mobipayments</url>
-    <scm>
-        <developerConnection>scm:git:ssh://git@github.com:Simbacode/mobipayments.git</developerConnection>
-        <connection>scm:git:ssh://git@github.com:Simbacode/mobipayments.git</connection>
-        <url>http://github.com/Simbacode/mobipayments/tree/master</url>
-    </scm>
-    <issueManagement>
-        <url>http://github.com/Simbacode/mobipayments</url>
-    </issueManagement>
-    <ciManagement>
-        <system>Travis-ci</system>
-        <url>https://travis-ci.org/Simbacode/mobipayments</url>
-    </ciManagement>
-    <description>http://github.com/Simbacode/mobipayments</description>
-    
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus snapshot repository</name>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-        <repository>
-            <id>sonatype-nexus-staging</id>
-            <name>Sonatype Nexus release repository</name>
-            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
+	<name>Mobipayments</name>
+	<url>http://github.com/Simbacode/mobipayments</url>
+	<scm>
+		<developerConnection>scm:git:ssh://git@github.com:Simbacode/mobipayments.git</developerConnection>
+		<connection>scm:git:ssh://git@github.com:Simbacode/mobipayments.git</connection>
+		<url>http://github.com/Simbacode/mobipayments/tree/master/</url>
+		<tag>mobipayments-0.0.1</tag>
+	</scm>
+	<issueManagement>
+		<url>http://github.com/Simbacode/mobipayments</url>
+	</issueManagement>
+	<ciManagement>
+		<system>Travis-ci</system>
+		<url>https://travis-ci.org/Simbacode/mobipayments</url>
+	</ciManagement>
+	<description>http://github.com/Simbacode/mobipayments</description>
 
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>9</version>
-    </parent>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sonatype-nexus-snapshots</id>
+			<name>Sonatype Nexus snapshot repository</name>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>sonatype-nexus-staging</id>
+			<name>Sonatype Nexus release repository</name>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
-    <licenses>
-        <license>
-            <name>MIT</name>
-            <url>http://github.com/Simbacode/mobipayments/blob/master/LICENSE.txt</url>
-        </license>
-    </licenses>
-    <developers>
-        <developer>
-            <name>Acellam Guy</name>
-            <email>abiccel@yahoo.com</email>
-            <organization>Simbacode</organization>
-            <organizationUrl>http://www.simbacode.com</organizationUrl>
-        </developer>
-    </developers>
-    <properties>
-        <java.version>1.7</java.version>
-        <jacoco.version>0.6.4.201312101107</jacoco.version>
-        <arguments>-e</arguments>
-    </properties>
-    <build>
-        <plugins>
-            <!-- Set up java 7 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
-            </plugin>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>9</version>
+	</parent>
 
-            <!-- Generates test coverage report into "target/site/jacoco" directory -->
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <version>${jacoco.version}</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.2.2</version>
-                <configuration>
-                    <checkModificationExcludes>
-                        <checkModificationExclude>pom.xml</checkModificationExclude>
-                        <checkModificationExclude>.classpath</checkModificationExclude>
-                        <checkModificationExclude>.gitignore</checkModificationExclude>
-                        <checkModificationExclude>.settings/org.eclipse.core.resources.prefs</checkModificationExclude>
-                        <checkModificationExclude>.settings/org.eclipse.jdt.core.prefs</checkModificationExclude>
-                        <checkModificationExclude>.settings/org.eclipse.m2e.core.prefs</checkModificationExclude>
-                    </checkModificationExcludes>
-                </configuration>
-            </plugin>
-        </plugins>
+	<licenses>
+		<license>
+			<name>MIT</name>
+			<url>http://github.com/Simbacode/mobipayments/blob/master/LICENSE.txt</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<name>Acellam Guy</name>
+			<email>abiccel@yahoo.com</email>
+			<organization>Simbacode</organization>
+			<organizationUrl>http://www.simbacode.com</organizationUrl>
+		</developer>
+	</developers>
+	<properties>
+		<java.version>1.7</java.version>
+		<jacoco.version>0.6.4.201312101107</jacoco.version>
+		<arguments>-e</arguments>
+	</properties>
+	<build>
+		<plugins>
+			<!-- Set up java 7 -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>${java.version}</source>
+					<target>${java.version}</target>
+				</configuration>
+			</plugin>
 
-    </build>
+			<!-- Generates test coverage report into "target/site/jacoco" directory -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>${jacoco.version}</version>
+				<executions>
+					<execution>
+						<id>report</id>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.4.1</version>
+				<configuration>
+					<checkModificationExcludes>
+						<checkModificationExclude>pom.xml</checkModificationExclude>
+						<checkModificationExclude>.classpath</checkModificationExclude>
+						<checkModificationExclude>.gitignore</checkModificationExclude>
+						<checkModificationExclude>.settings/org.eclipse.core.resources.prefs</checkModificationExclude>
+						<checkModificationExclude>.settings/org.eclipse.jdt.core.prefs</checkModificationExclude>
+						<checkModificationExclude>.settings/org.eclipse.m2e.core.prefs</checkModificationExclude>
+					</checkModificationExcludes>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.google.code.maven-scm-provider-svnjava</groupId>
+						<artifactId>maven-scm-provider-svnjava</artifactId>
+						<version>2.0.6</version>
+						<scope>compile</scope>
+					</dependency>
+				</dependencies>
+			</plugin>
+			
+		</plugins>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.4</version>
-            <scope>compile</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.1</version>
-        </dependency>
-        <dependency>
-            <groupId>net.oauth.core</groupId>
-            <artifactId>oauth</artifactId>
-            <version>20100527</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpcore</artifactId>
-            <version>4.0.1</version>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>com.google.http-client</groupId>
-            <artifactId>google-http-client</artifactId>
-            <version>1.18.0-rc</version>
-            <type>jar</type>
-        </dependency>
-    </dependencies>
-    <profiles>
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <version>1.1</version>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+	</build>
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.8.1</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.4</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>net.oauth.core</groupId>
+			<artifactId>oauth</artifactId>
+			<version>20100527</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.0.1</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client</artifactId>
+			<version>1.18.0-rc</version>
+			<type>jar</type>
+		</dependency>
+	</dependencies>
+	<profiles>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
 </project>
