--- a/pom.xml
+++ b/pom.xml
@@ -13,13 +13,14 @@
 		</contributor>
 	</contributors>
 	<scm>
-		<developerConnection>scm:git:git+ssh://git@github.com:Simbacode/mobipayments.git</developerConnection>
-		<connection>scm:git:ssh://git@github.com:Simbacode/mobipayments.git</connection>
-		<url>http://github.com/Simbacode/mobipayments/tree/master/</url>
+		<developerConnection>scm:git:git@git@github.com:Simbacode/mobipayments.git</developerConnection>
+		<connection>scm:git:git@github.com:Simbacode/mobipayments.git</connection>
+		<url>git@github.com:Simbacode/mobipayments.git</url>
 		<tag>mobipayments-0.0.1</tag>
 	</scm>
 	<issueManagement>
 		<url>http://github.com/Simbacode/mobipayments</url>
+		<system>Git Hub</system>
 	</issueManagement>
 	<ciManagement>
 		<system>Travis-ci</system>
