--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.simbacode</groupId>
 	<artifactId>mobipayments</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 
 	<name>Mobipayments</name>
 	<url>http://github.com/Simbacode/mobipayments</url>
@@ -16,8 +17,7 @@
 		<url>git://git@github.com:Simbacode/mobipayments.git</url>
 		<connection>scm:git:git@github.com:Simbacode/mobipayments.git</connection>
 		<developerConnection>scm:git:git@github.com:Simbacode/mobipayments.git</developerConnection>
-	  <tag>mobipayments-0.0.1</tag>
-  </scm>
+	</scm>
 	<issueManagement>
 		<url>http://github.com/Simbacode/mobipayments</url>
 		<system>Git Hub</system>
@@ -27,7 +27,7 @@
 		<url>https://travis-ci.org/Simbacode/mobipayments</url>
 	</ciManagement>
 	<description>http://github.com/Simbacode/mobipayments</description>
-	<repositories>
+	<!--<repositories>
 		<repository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>Sonatype Nexus Snapshots</name>
@@ -39,7 +39,7 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
-	</repositories>
+	</repositories> -->
 	<distributionManagement>
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
