[maven-release-plugin] prepare release mobipayments-0.0.1

--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.simbacode</groupId>
 	<artifactId>mobipayments</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<name>Mobipayments</name>
 	<url>http://github.com/Simbacode/mobipayments</url>
@@ -17,7 +16,8 @@
 		<url>git://git@github.com:Simbacode/mobipayments.git</url>
 		<connection>scm:git:git@github.com:Simbacode/mobipayments.git</connection>
 		<developerConnection>scm:git:git@github.com:Simbacode/mobipayments.git</developerConnection>
-	</scm>
+	  <tag>mobipayments-0.0.1</tag>
+  </scm>
 	<issueManagement>
 		<url>http://github.com/Simbacode/mobipayments</url>
 		<system>Git Hub</system>
