all pesapal api implemented

--- a/pesapal.properties
+++ b/pesapal.properties
@@ -1,10 +1,13 @@
-# NamedConsumerPool can gets consumer configuration parameters from a file like this.
+# NamedConsumerPool
 
+#your consumer details
 pesapal.consumerKey: {YOUR KEY}
 pesapal.consumerSecret: {YOUR SECRET}
 pesapal.callbackURL: http://simbacode.com/redirect.php
 pesapal.consumer.oauth_signature_method: HMAC-SHA1
-# There can be more consumer properties.
-pesapal.serviceProvider.requestTokenURL: http://demo.pesapal.com/API/PostPesapalDirectOrderV4
-pesapal.serviceProvider.userAuthorizationURL: http://demo.pesapal.com/API/PostPesapalDirectOrderV4
-pesapal.serviceProvider.accessTokenURL: http://demo.pesapal.com/API/PostPesapalDirectOrderV4
+
+# pesapal/provider server URL.
+pesapal.serviceProvider.PostPesapalDirectOrderV4: http://demo.pesapal.com/API/PostPesapalDirectOrderV4
+pesapal.serviceProvider.QueryPaymentStatus: https://demo.pesapal.com/API/QueryPaymentStatus
+pesapal.serviceProvider.QueryPaymentStatusByMerchantRef: https://demo.pesapal.com/API/QueryPaymentStatusByMerchantRef
+pesapal.serviceProvider.QueryPaymentDetails: https://demo.pesapal.com/API/QueryPaymentDetails
