--- a/pesapal.properties
+++ b/pesapal.properties
@@ -11,3 +11,4 @@ pesapal.serviceProvider.PostPesapalDirectOrderV4: http://demo.pesapal.com/API/Po
 pesapal.serviceProvider.QueryPaymentStatus: https://demo.pesapal.com/API/QueryPaymentStatus
 pesapal.serviceProvider.QueryPaymentStatusByMerchantRef: https://demo.pesapal.com/API/QueryPaymentStatusByMerchantRef
 pesapal.serviceProvider.QueryPaymentDetails: https://demo.pesapal.com/API/QueryPaymentDetails
+pesapal.serviceProvider.querypaymentstatus: https://demo.pesapal.com/api/querypaymentstatus
