--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.simbacode</groupId>
 	<artifactId>mobipayments</artifactId>
@@ -16,8 +17,8 @@
 		<url>git://git@github.com:Simbacode/mobipayments.git</url>
 		<connection>scm:git:git@github.com:Simbacode/mobipayments.git</connection>
 		<developerConnection>scm:git:git@github.com:Simbacode/mobipayments.git</developerConnection>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 	<issueManagement>
 		<url>http://github.com/Simbacode/mobipayments</url>
 		<system>Git Hub</system>
@@ -27,19 +28,10 @@
 		<url>https://travis-ci.org/Simbacode/mobipayments</url>
 	</ciManagement>
 	<description>http://github.com/Simbacode/mobipayments</description>
-	<!--<repositories>
-		<repository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-	</repositories> -->
+	<!--<repositories> <repository> <id>sonatype-nexus-snapshots</id> <name>Sonatype 
+		Nexus Snapshots</name> <url>https://oss.sonatype.org/content/repositories/snapshots</url> 
+		<releases> <enabled>false</enabled> </releases> <snapshots> <enabled>true</enabled> 
+		</snapshots> </repository> </repositories> -->
 	<distributionManagement>
 		<snapshotRepository>
 			<id>sonatype-nexus-snapshots</id>
@@ -107,6 +99,12 @@
 							<goal>report</goal>
 						</goals>
 					</execution>
+					<execution>
+						<id>prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
 				</executions>
 			</plugin>
 			<plugin>
@@ -157,6 +155,11 @@
 					<nexusUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2/</nexusUrl>
 					<serverId>sonatype-nexus-staging</serverId>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>2.2.0</version>
 			</plugin>
 		</plugins>
 
